updated my icon logo

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <meta content="" name="description" />
 
     <!-- Favicons -->
-    <link href="img/eze.jpg" rel="icon" />
-    <link href="img/eze.jpg" rel="apple-touch-icon" />
+    <link href="img/logo.png" rel="icon" />
+    <link href="img/logo.png" rel="apple-touch-icon" />
 
     <!-- Bootstrap CSS File -->
     <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
@@ -196,21 +196,17 @@
                       <h5 class="title-left">About Me</h5>
                     </div>
                     <p class="lead">
-                      I'm a mobile developer with expertise In Flutter, eagerly
-                      seeking an entry-level role. I have hands-on experience
-                      with Flutter, having worked on multiple projects. My goal
-                      is to create captivating and user-friendly mobile
-                      applications through skillful coding and a focus on
-                      user-centric design.
+                      I'm a mobile developer with expertise In Flutter and Dart.
+                      I have hands-on experience with Flutter, having worked on
+                      multiple projects. My goal is to create captivating and
+                      user-friendly mobile applications through skillful coding
+                      and a focus on user-centric design.
                     </p>
                     <p class="lead">
                       I'm enthusiastic about leveraging my coding proficiency to
                       contribute to innovative mobile app solutions, and I'm
                       excited about the prospect of applying my skills in a
-                      dynamic and collaborative environment. My goal is to
-                      continue developing my abilities, taking on new
-                      challenges, and making a meaningful impact in the world of
-                      mobile app development.
+                      dynamic and collaborative environment.
                     </p>
 
                     <!-- Add a "Download Resume" button -->
@@ -242,7 +238,7 @@
           <div class="col-sm-12">
             <div class="title-box text-center">
               <h3 class="title-a">Portfolio</h3>
-              <p class="subtitle-a">Some of my Personal Projects.</p>
+              <p class="subtitle-a">Some of my Projects.</p>
               <div class="line-mf"></div>
             </div>
           </div>
