added two new fintech projects

--- a/index.html
+++ b/index.html
@@ -304,27 +304,47 @@
             </a>
           </div>
 
-          <!-- project 4
+          <!-- project 4 -->
           <div class="col col-md-3 px-3">
-            <a href="blog-single.html">
+            <a href="kolomoni_agency.html">
               <div class="work-box">
                 <div class="work-img text-center">
                   <img
-                    src="img/work-1.jpg"
+                    src="img/mockup_Image/k4.jpg"
                     alt=""
                     class="img-fluid"
                     style="height: 27em; width: 15em"
                   />
                 </div>
                 <div class="title text-center py-3 m-0">
-                  <h2 class="w-title">PetPulse</h2>
-                  <p class="w-ctegory">Dog App</p>
+                  <h2 class="w-title">Agency Banking</h2>
+                  <p class="w-ctegory">Fintech</p>
                 </div>
               </div>
             </a>
-          </div> -->
+          </div>
 
           <!-- project 5 -->
+          <div class="col col-md-3 px-3">
+            <a href="kolomoni_mobile.html">
+              <div class="work-box">
+                <div class="work-img">
+                  <img
+                    src="img/mockup_Image/kolo1.jpg"
+                    alt=""
+                    class="img-fluid"
+                    style="height: 27em; width: 15em"
+                  />
+                </div>
+                <div class="title text-center py-3 m-0">
+                  <h2 class="w-title">Mobile Banking</h2>
+                  <p class="w-ctegory">Fintech</p>
+                </div>
+              </div>
+            </a>
+          </div>
+
+          <!-- project 6 -->
           <div class="col col-md-3 px-3">
             <a href="task-manager.html">
               <div class="work-box">
@@ -342,26 +362,6 @@
               </div>
             </a>
           </div>
-
-          <!-- project 6
-          <div class="col col-md-4 px-3">
-            <a href="blog-single.html">
-              <div class="work-box">
-                <div class="work-img">
-                  <img
-                    src="img/work-1.jpg"
-                    alt=""
-                    class="img-fluid"
-                    style="height: 27em; width: 15em"
-                  />
-                </div>
-                <div class="title text-center py-3 m-0">
-                  <h2 class="w-title">Loreda Cuno Nere</h2>
-                  <p class="w-ctegory">Web App</p>
-                </div>
-              </div>
-            </a>
-          </div> -->
         </div>
       </div>
     </section>
