updated aurora mockup

--- a/index.html
+++ b/index.html
@@ -249,11 +249,11 @@
         >
           <!-- project 1 -->
           <div class="col col-md-3 px-3">
-            <a href="blog-single.html">
+            <a href="aurora.html">
               <div class="work-box">
                 <div class="work-img text-center">
                   <img
-                    src="img/mockup_Image/auora-1.png"
+                    src="img/mockup_Image/auroraa1.jpg"
                     alt=""
                     class="img-fluid"
                   />
