--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                     <div class="col-sm-6 col-md-5">
                       <div class="about-img">
                         <img
-                          src="img/eze.jpg"
+                          src="img/potrait.jpg"
                           class="img-fluid rounded b-shadow-a"
                           alt=""
                         />
@@ -212,7 +212,7 @@
                     <!-- Add a "Download Resume" button -->
                     <div class="download-button">
                       <a
-                        href="Resume.pdf"
+                        href="My Resume.pdf"
                         class="btn btn-color text-white resume-btn"
                         download
                         >Download Resume</a
