--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       id="mainNav"
     >
       <div class="container">
-        <a class="navbar-brand js-scroll" href="index.html">Chuksmobile</a>
+        <a class="navbar-brand js-scroll" href="index.html">Devchuks</a>
         <button
           class="navbar-toggler collapsed"
           type="button"
