--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                     <!-- Add a "Download Resume" button -->
                     <div class="download-button">
                       <a
-                        href="My Resume.pdf"
+                        href="devchuks_resume.pdf"
                         class="btn btn-color text-white resume-btn"
                         download
                         >Download Resume</a
