--- a/index.html
+++ b/index.html
@@ -228,63 +228,60 @@
     </section>
 
     <!--/ Section Portfolio Star /-->
-    <section
-      id="portfolio"
-      class="portfolio-mf sect-pt4 route mb-0 paralax-mf footer-paralax bg-image sect-mt4 route mt-0"
-      style="background: #eeeeee; background-image: url(img/blog_bg2.png)"
-    >
+    <section id="portfolio" class="portfolio-section bg-light py-5">
       <div class="container">
-        <div class="row">
-          <div class="col-sm-12">
-            <div class="title-box text-center">
-              <h3 class="title-a">Portfolio</h3>
-              <p class="subtitle-a">Some of my Projects.</p>
-              <div class="line-mf"></div>
-            </div>
+        <div class="row text-center mb-5">
+          <div class="col-12">
+            <h2 class="display-5 fw-bold mb-3">My Portfolio</h2>
+            <p class="text-muted lead">Showcasing innovative projects across various domains</p>
+            <hr class="w-25 mx-auto">
           </div>
         </div>
 
-        <div
-          class="row d-flex justify-content-between align-items-center portfolio-row"
-        >
+        <div class="row g-4">
+
           <!-- project 1 -->
-          <div class="col col-md-3 px-3">
-            <a href="aurora.html">
-              <div class="work-box">
-                <div class="work-img text-center">
-                  <img
-                    src="img/mockup_Image/auroraa1.jpg"
-                    alt=""
-                    class="img-fluid"
-                  />
-                </div>
-                <div class="title text-center py-3 m-0">
-                  <h2 class="w-title">Aurora Academy</h2>
-                  <p class="w-ctegory">School Management App</p>
+          <div class="col-12 col-md-4 col-lg-4">
+            <div class="card project-card h-100 shadow-sm border-0 hover-lift">
+              <div class="card-img-top overflow-hidden position-relative">
+                <img 
+                  src="img/mockup_Image/auroraa1.jpg" 
+                  alt="Aurora Academy" 
+                  class="img-fluid w-100 project-image"
+                >
+                <div class="project-overlay position-absolute">
+                  <a href="aurora.html" class="btn btn-light stretched-link">View Project</a>
                 </div>
               </div>
-            </a>
+              <div class="card-body text-center">
+                <h5 class="card-title mb-2">Aurora Academy</h5>
+                <p class="card-text text-muted">School Management App</p>
+              </div>
+            </div>
           </div>
+    
+    
 
          <!-- project 2 -->
-          <div class="col col-md-3 px-3">
-            <a href="kolomoni_mobile.html">
-              <div class="work-box">
-                <div class="work-img">
-                  <img
-                    src="img/mockup_Image/kolo1.jpg"
-                    alt=""
-                    class="img-fluid"
-                    style="height: 27em; width: 15em"
-                  />
-                </div>
-                <div class="title text-center py-3 m-0">
-                  <h2 class="w-title">Mobile Banking</h2>
-                  <p class="w-ctegory">Fintech</p>
-                </div>
+         <div class="col-12 col-md-4 col-lg-4">
+          <div class="card project-card h-100 shadow-sm border-0 hover-lift">
+            <div class="card-img-top overflow-hidden position-relative">
+              <img 
+                src="img/mockup_Image/kolo1.jpg" 
+                alt="Mobile Banking" 
+                class="img-fluid w-100 project-image"
+              >
+              <div class="project-overlay position-absolute">
+                <a href="kolomoni_mobile.html" class="btn btn-light stretched-link">View Project</a>
               </div>
-            </a>
+            </div>
+            <div class="card-body text-center">
+              <h5 class="card-title mb-2">Mobile Banking</h5>
+              <p class="card-text text-muted">Fintech</p>
+            </div>
           </div>
+        </div>
+  
 
           <!-- project 3 -->
           <div class="col col-md-3 px-3">
