--- a/index.html
+++ b/index.html
@@ -445,5 +445,8 @@
 
     <!-- Template Main Javascript File -->
     <script src="js/main.js"></script>
+    <footer>
+      <p>&copy; 2024 Eze Chukwuemeka. All Rights Reserved.</p>
+  </footer>
   </body>
 </html>
