--- a/kolomoni_agency.html
+++ b/kolomoni_agency.html
@@ -241,38 +241,42 @@
           <div class="row">
             <div class="col-sm-12">
               <div class="copyright-box">
-                <div id="socials" class="socials rounded">
-                  <ul>
-                    <li>
-                      <a href="https://github.com/Devchuks98"
-                        ><span class="ico-circle"
-                          ><i class="ion-social-github"></i></span
-                      ></a>
+                <div id="socials" class="socials rounded d-flex justify-content-center">
+                  <ul class="list-unstyled d-flex">
+                    <li class="mx-3">
+                      <a href="https://github.com/Devchuks98">
+                        <span class="ico-circle">
+                          <i class="ion-social-github"></i>
+                        </span>
+                      </a>
                     </li>
-                    <li>
-                      <a href="https://wa.me/09072623219"
-                        ><span class="ico-circle"
-                          ><i class="ion-social-whatsapp"></i></span
-                      ></a>
+                    <li class="mx-3">
+                      <a href="https://wa.me/08131969117">
+                        <span class="ico-circle">
+                          <i class="ion-social-whatsapp"></i>
+                        </span>
+                      </a>
                     </li>
-                    <li>
-                      <a href="https://twitter.com/stonecode_"
-                        ><span class="ico-circle"
-                          ><i class="ion-social-twitter"></i></span
-                      ></a>
+                    <li class="mx-3">
+                      <a href="https://twitter.com/stonecode_">
+                        <span class="ico-circle">
+                          <i class="ion-social-twitter"></i>
+                        </span>
+                      </a>
                     </li>
-                    <li>
-                      <a
-                        href="https://www.linkedin.com/in/chukwuemeka-eze-564a55219/"
-                        ><span class="ico-circle"
-                          ><i class="ion-social-linkedin"></i></span
-                      ></a>
+                    <li class="mx-3">
+                      <a href="https://www.linkedin.com/in/chukwuemeka-eze-564a55219/">
+                        <span class="ico-circle">
+                          <i class="ion-social-linkedin"></i>
+                        </span>
+                      </a>
                     </li>
-                    <li>
+                    <li class="mx-3">
                       <a href="mailto:chuksmobile98@gmail.com">
-                        <span class="ico-circle"
-                          ><i class="ion-ios-email"></i></span
-                      ></a>
+                        <span class="ico-circle">
+                          <i class="ion-ios-email"></i>
+                        </span>
+                      </a>
                     </li>
                   </ul>
                 </div>
