--- a/index.html
+++ b/index.html
@@ -633,7 +633,7 @@
                     <div class="col-sm-6 col-md-5">
                       <div class="about-img">
                         <img
-                          src="img/potrait2.jpg"
+                          src="img/d_mafia.jpg"
                           class="img-fluid rounded b-shadow-a"
                           alt="Eze Chukwuemeka"
                         />
