updated number format

--- a/index.html
+++ b/index.html
@@ -934,7 +934,7 @@
                       </a>
                     </li>
                     <li class="mx-3">
-                      <a href="https://wa.me/08100131711" aria-label="WhatsApp">
+                      <a href="https://wa.me/+2348100131711" aria-label="WhatsApp">
                         <span class="ico-circle">
                           <i class="ion-social-whatsapp"></i>
                         </span>
