updated about me

--- a/index.html
+++ b/index.html
@@ -714,17 +714,13 @@
                       <h5 class="title-left">About Me</h5>
                     </div>
                     <p class="lead">
-                      I'm a mobile developer with expertise in Flutter and Dart.
-                      I have hands-on experience with Flutter, having worked on
-                      multiple projects. My goal is to create captivating and
-                      user-friendly mobile applications through skillful coding
-                      and a focus on user-centric design.
+                      I'm a mobile developer with strong expertise in Flutter and Dart, and hands-on experience building clean, scalable, and user-friendly mobile applications. Over the years, I've contributed to several projects across different industries, combining thoughtful design with efficient code to deliver high-quality digital experiences.
                     </p>
                     <p class="lead">
-                      I'm enthusiastic about leveraging my coding proficiency to
-                      contribute to innovative mobile app solutions, and I'm
-                      excited about the prospect of applying my skills in a
-                      dynamic and collaborative environment.
+                      Beyond development, I'm also a tech entrepreneur passionate about using software to solve real-world problems — whether small or large. My mission is to create impactful solutions that help businesses operate better, grow faster, or connect more meaningfully with their users.
+                    </p>
+                    <p class="lead">
+                      I'm excited by opportunities that challenge me to think critically, build creatively, and collaborate with forward-thinking teams to turn ideas into reality.
                     </p>
 
                     <div class="download-button">
